Sec9_Chap63-Introduction to Method Security: Pierrot optimizations